# ember

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  SETUP.md  bunfig.toml  electron.vite.config.ts  implementation-plan.md  package-lock.json  package.json  tailwind.config.js  todo.md  tsconfig.node.json  tsconfig.web.json  video-stream.md
.devin/rules/: no-unicode-icons.md
.devin/skills/: review-changes.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  website.yml
docs/: SHADER_INJECTION.md
native/gl-hook/: Makefile  glhook.c
native/libretro-frontend/: Cargo.toml
native/libretro-frontend/src/: audio.rs  buffer.rs  core.rs  ffi.rs  input.rs  lib.rs  shared_buffer.rs  thread.rs  video.rs
native/reshade-addon/: Makefile
native/video-decoder/: Cargo.toml  build.rs
native/video-decoder/src/: decoder.rs  lib.rs  mpv_dynamic.rs  mpv_renderer.rs  shared_buffer.rs
native/video-decoder/src/backends/: ffmpeg.rs  gstreamer.rs  mod.rs
native/vulkan-layer/: Makefile  VkLayer_ember_shader.json  layer.cpp
plugins/emulatorjs/: index.js  manifest.json
plugins/example-plugin/: index.ts  manifest.json
plugins/theme-dark-oled/: index.ts  manifest.json
plugins/theme-deep-ocean/: index.ts  (+1 more)
scripts/: build-native.ts  build-rust.ts  dev.ts  generate-plugin-index.ts  package-plugins.ts  setup-emulatorjs.ts  setup-libretro.ts  setup-rclone.ts  setup-v86.ts  setup-video-decoder.ts
website/: astro.config.mjs  package.json
(+382 files in other folders)
