[package]
name = "video-decoder"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", features = ["napi9", "async"] }
napi-derive = "2"
log = "0.4"
parking_lot = "0.12"
libc = "0.2"

# FFmpeg backend (preferred)
ffmpeg-next = { version = "6", optional = true }

# GStreamer fallback backend
gstreamer = { version = "0.23", optional = true }
gstreamer-app = { version = "0.23", optional = true }
gstreamer-video = { version = "0.23", optional = true }

[features]
default = []
ffmpeg = ["dep:ffmpeg-next"]
gstreamer = ["dep:gstreamer", "dep:gstreamer-app", "dep:gstreamer-video"]

[build-dependencies]
napi-build = "2"
